--- a/files/book/style.css
+++ b/files/book/style.css
@@ -120,7 +120,10 @@ blockquote {
   font-weight: 300;
   max-width: 80%;
 }
-.title-page img {
+@media screen {
+  .title-page img {
+    margin-top: 1em;
+  }
 }
 .title-page .author {
   font-size: 18px;
@@ -134,6 +137,14 @@ blockquote {
 .title-page .year {
   font-size: 20px;
   margin-top: 0.5em;
+}
+@media (prefers-color-scheme: dark) {
+  .title-page {
+    color: lightblue;
+  }
+  .title-page .subtitle::before {
+    background-color: lightblue;
+  }
 }
 .comment {
   background-color: #efefef;
