--- a/files/root/style.css
+++ b/files/root/style.css
@@ -31,6 +31,11 @@ a {
   color: #2e4057;
   position: relative;
 }
+@media (prefers-color-scheme: dark) {
+  .title-page {
+    color: lightblue;
+  }
+}
 .title-page .intro {
   font-size: 36px;
   font-weight: 300;
