--- a/files/book/style.css
+++ b/files/book/style.css
@@ -2,7 +2,7 @@
   .main-content {
     max-width: 785px;
     /* TODO: remove after moving to Jekyll */
-    margin: 0 auto;
+    margin: 2em auto;
     padding: 1em;
   }
 }
