--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,10 @@
 <html lang="{{ page.lang | default: site.lang | default: 'en' }}">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-{% if page.keywords %}<meta name="keywords" content="{{page.keywords}}" />
-{% endif %}{% if page.subject %}<meta name="subject" content="{{page.subject}}" />
-{% endif %}{% if page.copyright %}<meta name="copyright" content="{{page.copyright}}" />
-{% endif %}
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />{% if page.keywords %}
+<meta name="keywords" content="{{page.keywords}}" />{% endif %}{% if page.subject %}
+<meta name="subject" content="{{page.subject}}" />{% endif %}{% if page.copyright %}
+<meta name="copyright" content="{{page.copyright}}" />{% endif %}
 {%- seo -%}
 {% feed_meta %}
 <link href="/favicon.png" rel="icon" type="image/png" />{% for style in page.styles %}
