--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 {% feed_meta %}
 <link href="/favicon.png" rel="icon" type="image/png" />{% for style in page.styles %}
 <link href="{{ style | relative_url }}" rel="stylesheet" />{% endfor %}
-<script src="https://unpkg.com/alpinejs" defer></script>
+<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body x-data="{ buttons: false, prev_scroll: 0, right_sidebar_button: false, right_sidebar: false }"
       :class="(right_sidebar && window.innerWidth < 1600) ? 'overflow-hidden' : 'overflow-visible'">
