--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,14 +3,23 @@ layout: default
 ---
 <div class="page" @scroll.window="right_sidebar_button = (right_sidebar || window.innerWidth > 1000 || window.pageYOffset < prev_scroll) ? true : false; prev_scroll = window.pageYOffset">
 
-  <button id="right-btn" x-show="right_sidebar_button"
-          @click="right_sidebar = !right_sidebar">
+  <style>
+    [x-cloak] {
+      display: none !important;
+    }
+  </style>
+
+  <button id="right-btn" x-cloak
+          x-show="right_sidebar_button"
+          @click="right_sidebar = !right_sidebar"
+          @keydown.escape="right_sidebar = false"
+          :aria-expanded="right_sidebar">
     <div class="dots"></div>
     <div class="dots"></div>
     <div class="dots"></div>
   </button>
 
-  <aside id="right-sidebar"
+  <aside id="right-sidebar" x-cloak
          x-show="right_sidebar" x-transition.origin.top.right
          @click.outside="if (window.innerWidth < 1600) right_sidebar = false">
     <nav>
@@ -30,7 +39,7 @@ layout: default
     </nav>
   </aside>
 
-  <div class="main-content">
+  <main class="main-content">
     {{ content }}
-  </div>
+  </main>
 </div>
