Update comments in the book and add Subscribe button

--- a/files/root/style.css
+++ b/files/root/style.css
@@ -22,6 +22,13 @@ a {
   text-decoration: underline;
   cursor: pointer;
 }
+#button-updates {
+  position: fixed;
+  top: 1rem;
+  right: 1rem;
+  color: #888;
+  font-size: 0.75rem;
+}
 .title-page {
   display: flex;
   flex-direction: column;
