--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,5 +8,5 @@
 {% feed_meta %}
 <link href="/favicon.png" rel="icon" type="image/png" />{% for style in page.styles %}
 <link href="{{ style | relative_url }}" rel="stylesheet" />{% endfor %}
-<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.14.9/cdn.min.js" integrity="sha512-KSdieUYxSxr/laB3Bh5TP8GAng49b2qRfdcnFvh8OuPpPgksA189OQ9v1A3gIz5P9s3A4aXMe5uiHLMfla60Uw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
