--- a/_tailwind.css
+++ b/_tailwind.css
@@ -14,6 +14,10 @@
   p:last-child {
     margin-bottom: 0;
   }
+  p a {
+    -webkit-text-decoration: revert;
+    text-decoration: revert;
+  }
   img {
     margin: auto;
   }
