Update styles for page design and add sidebar menu buttons

--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,8 +1,8 @@
-<div class="shadow bg-white dark:text-white mt-4 rounded-lg dark:shadow-2xl dark:bg-[#28282B]">
+<div class="bg-white dark:text-white mt-4 rounded-lg shadow-md dark:shadow-2xl dark:bg-[#28282B]">
   <div class="flex items-center justify-between px-4 py-2">
-    <div class="flex space-x-2 items-center">
+    <div class="flex items-center">
       <div>
-        <div class="font-semibold cursor-pointer"><a href="{{ include.page.url }}">{{ include.page.title }}</a></div>
+        <div class="font-bold cursor-pointer"><a href="{{ include.page.url }}">{{ include.page.title }}</a></div>
         <span class="text-sm text-gray-500 dark:text-gray-400">{{ include.page.date }}</span>
       </div>
     </div>
