--- a/files/home/style.css
+++ b/files/home/style.css
@@ -104,3 +104,9 @@ a {
 .grey-btn:active {
   background-color: darkgrey;
 }
+@media (prefers-color-scheme: dark) {
+  body {
+    color: white;
+    background-color: black;
+  }
+}
