--- a/_tailwind.css
+++ b/_tailwind.css
@@ -3,7 +3,14 @@
 @layer base {
   html {
     line-height: initial;
+    color: black;
     background-color: #f7f7f7;
+  }
+  @media (prefers-color-scheme: dark) {
+    html {
+      color: white;
+      background-color: #18191a;
+    }
   }
   p {
     margin: 1em 0;
