--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,34 +20,14 @@ layout: default
   </header>
 
   <div class="flex justify-center">
-    <aside class="bg-[#f7f7f7] dark:bg-[#18191a] w-1/5 pt-12 h-full xl:flex flex-col fixed top-0 left-0 transform transition-transform duration-300 ease-in-out z-10 xl:translate-x-0" :class="leftSidebarOpen ? 'translate-x-0' : '-translate-x-full'">
-      <div class="p-4 h-full xl:text-gray-500 dark:text-gray-400 overflow-y-auto">
-        <h2 class="text-lg font-bold mb-4">Site Menu</h2>
-        <nav>
-          <ul class="flex flex-col gap-2">
-            <li><a href="/ru/judka/photo" class="block hover:bg-gray-200 dark:hover:bg-gray-800 rounded">Фотографии</a></li>
-          </ul>
-        </nav>
-      </div>
-
-      <div class="mt-auto p-6 text-sm text-gray-500 dark:text-gray-400">
-        Judka Linkov &copy; <span x-data="{ year: new Date().getFullYear() }" x-text="year">{{ "now" | date: "%Y" }}</span>
-      </div>
-    </aside>
+    {% include sidebar_left.html %}
 
     <main class="w-full lg:w-2/3 xl:w-2/5 pt-20 px-2">
       {{ content }}
       <div class="py-2"></div>
     </main>
 
-    <aside class="bg-[#f7f7f7] dark:bg-[#18191a] w-1/5 pt-12 h-full xl:flex flex-col fixed top-0 right-0 transform transition-transform duration-300 ease-in-out z-10 xl:translate-x-0" :class="rightSidebarOpen ? 'translate-x-0' : 'translate-x-full'">
-      <div class="p-4 h-full xl:text-gray-500 dark:text-gray-400 overflow-y-auto">
-        <nav>
-          <ul class="flex flex-col gap-2">
-          </ul>
-        </nav>
-      </div>
-    </aside>
+    {% include sidebar_right.html %}
   </div>
 
   <!-- Overlay to close sidebars when clicking outside on mobile -->
