Replace categories with directory structure

--- a/_includes/card.html
+++ b/_includes/card.html
@@ -3,7 +3,7 @@
     <div class="flex items-center">
       <div>
         <div class="font-bold cursor-pointer"><a href="{{ include.page.url }}">{{ include.page.title }}</a></div>
-        <span class="text-sm text-gray-500 dark:text-gray-400">{{ include.page.date }}</span>
+        <span class="text-sm text-gray-500 dark:text-gray-400">{{ include.page.time }}</span>
       </div>
     </div>
     <div class="w-8 h-8 grid place-items-center text-xl text-gray-500 hover:bg-gray-200 dark:text-dark-txt dark:hover:bg-dark-third rounded-full cursor-pointer">
