--- a/files/page/style.css
+++ b/files/page/style.css
@@ -231,17 +231,11 @@
   .flex {
     display: flex;
   }
-  .grid {
-    display: grid;
-  }
   .hidden {
     display: none;
   }
   .h-6 {
     height: calc(var(--spacing) * 6);
-  }
-  .h-8 {
-    height: calc(var(--spacing) * 8);
   }
   .h-auto {
     height: auto;
@@ -249,8 +243,8 @@
   .h-full {
     height: 100%;
   }
-  .w-1\/2 {
-    width: calc(1/2 * 100%);
+  .w-4\/5 {
+    width: calc(4/5 * 100%);
   }
   .w-6 {
     width: calc(var(--spacing) * 6);
@@ -281,9 +275,6 @@
   }
   .flex-col {
     flex-direction: column;
-  }
-  .place-items-center {
-    place-items: center;
   }
   .items-center {
     align-items: center;
@@ -413,6 +404,11 @@
       outline-style: none;
     }
   }
+  .sm\:w-1\/2 {
+    @media (width >= 40rem) {
+      width: calc(1/2 * 100%);
+    }
+  }
   .md\:w-1\/3 {
     @media (width >= 48rem) {
       width: calc(1/3 * 100%);
@@ -464,6 +460,15 @@
       color: var(--color-gray-500);
     }
   }
+  .hover\:xl\:text-black {
+    &:hover {
+      @media (hover: hover) {
+        @media (width >= 80rem) {
+          color: var(--color-black);
+        }
+      }
+    }
+  }
   .dark\:bg-\[\#18191a\] {
     @media (prefers-color-scheme: dark) {
       background-color: #18191a;
@@ -503,6 +508,17 @@
     @media (width >= 80rem) {
       @media (prefers-color-scheme: dark) {
         color: var(--color-gray-400);
+      }
+    }
+  }
+  .hover\:xl\:dark\:text-white {
+    &:hover {
+      @media (hover: hover) {
+        @media (width >= 80rem) {
+          @media (prefers-color-scheme: dark) {
+            color: var(--color-white);
+          }
+        }
       }
     }
   }
