--- a/_layouts/card.html
+++ b/_layouts/card.html
@@ -1,4 +1,4 @@
 ---
 layout: page
 ---
-{% include card.html page=page content=content %}
+{% include card.html page=page content=content clickable=false %}
