--- a/_includes/nav_left.html
+++ b/_includes/nav_left.html
@@ -1,5 +1,9 @@
 <nav>
-  <ul class="flex flex-col gap-2">
-    <li><a href="/ru/judka/photo" class="block hover:bg-gray-200 dark:hover:bg-gray-800 rounded">Фотографии</a></li>
-  </ul>
+  <svg xmlns="http://www.w3.org/2000/svg" id="arrow-svg" class="hidden">
+    <symbol id="arrow-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <polyline points="9 18 15 12 9 6"></polyline>
+    </symbol>
+  </svg>
+  {% assign nav = site.data[page.nav] %}
+  {% include nav.html nav=nav level=0 %}
 </nav>
