--- a/_includes/nav_right.html
+++ b/_includes/nav_right.html
@@ -1,5 +1,6 @@
 <nav>
   <ul class="flex flex-col gap-2">
+  {% include toc.html %}
   {%- for item in page.contents -%}
     <li><a href="#{{ item.id }}" class="block hover:bg-gray-200 dark:hover:bg-gray-800 rounded">{{ item.title }}</a></li>
   {% endfor %}
