--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -6,6 +6,9 @@ layout: page
 <ul>
 {%- assign dir = page.url | append: "/" -%}
 {%- assign pages = site.pages | where: "dir", dir -%}
+{%- if page.sortby -%}
+{%- assign pages = pages | sort: page.sortby -%}
+{%- endif -%}
 {% for p in pages %}
 <li>
 {%- assign c = p.content | markdownify -%}
