Add lj-cut to truncate content

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -12,6 +12,17 @@ layout: page
 {% for p in pages %}
 <li>
 {%- assign c = p.content | markdownify -%}
+{%- if c contains "<!-- lj-cut -->" -%}
+{%- assign parts = c | split: "<!-- lj-cut -->" -%}
+{%- assign c = parts[0] -%}
+{%- assign c = c | append: '<p class="text-right"><a href="' | append: p.url | append: '" class="font-bold">(' -%}
+{%- if p.lang == "ru" -%}
+{%- assign c = c | append: 'Читать дальше' -%}
+{%- else -%}
+{%- assign c = c | append: 'Read more' -%}
+{%- endif -%}
+{%- assign c = c | append: '…)</a></p>' -%}
+{%- endif -%}
 {%- include card.html page=p content=c clickable=true -%}
 </li>
 {% endfor %}
